Modal for tutor selector

--- a/frontend/src/assets/bootstrap.scss
+++ b/frontend/src/assets/bootstrap.scss
@@ -4,6 +4,9 @@ $theme-colors: (
   "primary-dark": darken(#1C7CD5, 20%)
 );
 
+.font-regular {
+  font-size: 12px;
+}
 .font-large {
   font-size: 18px;
 }
